@@ -15,7 +15,13 @@ import static com.familink.backend.enums.Permission.*;
 @RequiredArgsConstructor
 public enum Role {
 
-    USER(Collections.emptySet()),
+    USER(
+            Set.of(
+                    USER_READ,
+                    USER_UPDATE,
+                    USER_DELETE,
+                    USER_CREATE
+            )),
     ADMIN(
             Set.of(
                     ADMIN_READ,
